Убран ArrayList